--- a/style.css
+++ b/style.css
@@ -3,3 +3,48 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header h1{
+  text-align: center;
+}
+
+header nav {
+  text-align: center;
+} 
+
+header nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+
+#featured-property img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 900px;
+}
+
+#featured-property figcaption {
+  font-size: x-small;
+  text-align: center;
+}
+
+#featured-property p {
+ text-align: center;
+ width: 800px;
+ padding-top: 10px;
+ margin-left: auto;
+ margin-right: auto;
+}
+
+#details {
+  display: flex;
+}
+
+#details div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
